--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
         {
           "fonts": ["./assets/fonts/Poppins-Bold.ttf"]
         }
+      ],
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
+        }
       ]
     ],
     "experiments": {
