--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -35,7 +36,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.8.0",
     "react-native-web": "~0.19.10",
-    "expo-navigation-bar": "~3.0.7"
+    "expo-av": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
