--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@hookform/resolvers": "^3.9.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
@@ -36,8 +38,11 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-shadow-2": "^7.1.1",
     "react-native-svg": "^15.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tailwindcss-react-native": "^1.7.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
