--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
@@ -40,9 +43,13 @@
     "react-native-screens": "3.31.1",
     "react-native-shadow-2": "^7.1.1",
     "react-native-svg": "^15.8.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0",
     "tailwindcss-react-native": "^1.7.10",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
