--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-plugins/react-query": "^0.0.7",
     "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.9.1",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.0.2",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.59.16",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
@@ -48,8 +51,7 @@
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "tailwindcss-react-native": "^1.7.10",
-    "zod": "^3.23.8",
-    "expo-image-picker": "~15.0.7"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.9",
