chore: add new library

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Santa_call_mobile",
+    "name": "Santa Call",
     "slug": "Santa_call_mobile",
     "version": "1.0.0",
     "orientation": "portrait",
