--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "expo": "~51.0.28",
     "expo-av": "~14.0.7",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.9",
     "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
+    "expo-network": "~6.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -39,7 +41,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.1",
     "react-native": "0.74.5",
-    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
